--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./assets/images/favicon-32x32.png"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- displays site properly based on user's device -->
 
-    <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" />
 
-    <title>
-      Frontend Mentor | Newsletter sign-up form with success message
-    </title>
+  <link rel="stylesheet" href="style.css" />
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <!-- <style>
+  <title>
+    Frontend Mentor | Newsletter sign-up form with success message
+  </title>
+
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <!-- <style>
       .attribution {
         font-size: 11px;
         text-align: center;
@@ -28,45 +24,53 @@
         color: hsl(228, 45%, 44%);
       }
     </style> -->
-  </head>
-  <body>
-    <!-- Sign-up form start -->
-    <div class="container">
-      <div class="left_container">
-        <h3>Stay updated!</h3>
-        <p>Join 60,000+ product managers receiving monthly updates on:</p>
-        <ul>
-          <li>Product discovery and building what matters</li>
-          <li>Measuring to ensure updates are a success</li>
-          <li>And much more!</li>
-        </ul>
+</head>
 
-        <form>
-          <label for="email">Email address</label>
-          <input type="email" id="email" placeholder="email@company.com" />
-          <button type="submit">Subscribe to monthly newsletter</button>
-        </form>
-      </div>
-      <div class="right_container">
-        <img src="./assets/images/illustration-sign-up-desktop.svg" alt="" />
-      </div>
+<body>
+  <!-- Sign-up form start -->
+  <div class="container">
+    <div class="left_container">
+      <h3>Stay updated!</h3>
+      <p>Join 60,000+ product managers receiving monthly updates on:</p>
+      <ul>
+        <li>Product discovery and building what matters</li>
+        <li>Measuring to ensure updates are a success</li>
+        <li>And much more!</li>
+      </ul>
+
+      <form>
+        <label for="email">Email address</label>
+        <input type="email" id="email" placeholder="email@company.com" />
+        <button type="submit">Subscribe to monthly newsletter</button>
+      </form>
     </div>
+    <div class="right_container">
+      <img src="./assets/images/illustration-sign-up-desktop.svg" alt="" />
+    </div>
+  </div>
 
-    <!-- Sign-up form end -->
+  <!-- Sign-up form end -->
 
-    <!-- Success message start -->
+  <!-- Success message start -->
 
-    <!-- Thanks for subscribing! A confirmation email has been sent to
-    ash@loremcompany.com. Please open it and click the button inside to confirm
-    your subscription. Dismiss message
+  <div class="container-2 hide">
+    <img src="./assets/images/icon-success.svg" alt="">
+    <h1>Thanks for subscribing!</h1>
+    <p>A confirmation email has been sent to
+      ash@loremcompany.com. Please open it and click the button inside to confirm
+      your subscription.</p>
+    <button class="dismiss">Dismiss message</button>
+  </div>
 
-    Success message end -->
+  <!-- Success message end -->
 
-    <!-- <div class="attribution">
+  <!-- <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>. -->
-    </div>
-  </body>
+  </div>
+  <script src="index.js"></script>
+</body>
+
 </html>
